--- a/templates/Base2.html.twig
+++ b/templates/Base2.html.twig
@@ -83,6 +83,7 @@
                         <li><a href="basic_table.html">Articles</a></li>
                         <li><a href="responsive_table.html">Produits</a></li>
                         <li><a href="advanced_table.html">Categories</a></li>
+                        <li><a href="advanced_table.html">Commandes</a></li>
                     </ul>
                 </li>
                 <li>
@@ -92,28 +93,8 @@
                         <span class="label label-theme pull-right mail-info">2</span>
                     </a>
                 </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="morris.html">Morris</a></li>
-                        <li><a href="chartjs.html">Chartjs</a></li>
-                        <li><a href="flot_chart.html">Flot Charts</a></li>
-                        <li><a href="xchart.html">xChart</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-comments-o"></i>
-                        <span>Chat Room</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="lobby.html">Lobby</a></li>
-                        <li><a href="chat_room.html"> Chat Room</a></li>
-                    </ul>
-                </li>
+
+
                 <li>
                     <a href="google_maps.html">
                         <i class="fa fa-map-marker"></i>
