--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -13,8 +13,8 @@
             <div class="col-lg-9">
 
                 <div class="card" style="width: 50rem; height: 40rem;">
-                    <img class="card-img-top" src="{{ article.image }}" alt="Card image cap" style="width: 100%;
-    height: 15vw; object-fit: cover;">
+                    <img class="card-img-top" src="{{ asset('Admin/uploads/images/'~ article.image) }}" alt="Card image cap" style="width: 100%;
+    height: 18vw; object-fit: cover;">
                     <div class="card-body">
                         <h4 class="card-title">{{ article.title }}</h4>
                         <p class="card-text">{{ article.description|slice(0,50) }}...</p>
