--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,27 +54,27 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav mr-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="product-list.html" class="nav-item nav-link">Products</a>
-                    <a href="product-detail.html" class="nav-item nav-link">Product Detail</a>
-                    <a href="cart.html" class="nav-item nav-link">Cart</a>
-                    <a href="checkout.html" class="nav-item nav-link">Checkout</a>
-                    <a href="my-account.html" class="nav-item nav-link">My Account</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">More Pages</a>
+                    <a href="index.html" class="nav-item nav-link active">Accueil</a>
+                    <a href="product-list.html" class="nav-item nav-link">Produits</a>
+                    <a href="product-detail.html" class="nav-item nav-link">Articles & Astuces</a>
+                    <a href="cart.html" class="nav-item nav-link">Panier</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <!--<div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
                         <div class="dropdown-menu">
                             <a href="wishlist.html" class="dropdown-item">Wishlist</a>
                             <a href="login.html" class="dropdown-item">Login & Register</a>
-                            <a href="contact.html" class="dropdown-item active">Contact Us</a>
+                            <a href="contact.html" class="dropdown-item">Contact Us</a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="navbar-nav ml-auto">
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User Account</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Mon compte</a>
                         <div class="dropdown-menu">
-                            <a href="#" class="dropdown-item">Login</a>
-                            <a href="#" class="dropdown-item">Register</a>
+                            <a href="my-account.html" class="dropdown-item">Mon compte</a>
+                            <a href="#" class="dropdown-item">Se connecter</a>
+                            <a href="#" class="dropdown-item">S'inscrire</a>
                         </div>
                     </div>
                 </div>
