--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
                 <div class="">
                     <a class="review-slider-item">
                         <div class="review-img">
-                            <img src="{{ article.image }}" alt="image-article">
+                            <img src="{{ asset('Admin/uploads/images/'~ article.image) }}" alt="image-article">
                         </div>
                         <div class="review-text">
                             <h2>{{ article.title }}</h2>
