--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -20,10 +20,51 @@
             <img src="{{ asset('Admin/uploads/images/'~ article.image) }}" alt="photo" style="max-width: 60%">
         </figure>
         <small class="text-muted">Date de publication : {{ article.createdAt|date("d/m/Y") }}</small>
+                 <a href="{{ path('article_like',{'id': article.id}) }}" class="btn-link js-like" style="padding-left: 300px">
+                     {% if app.user and article.isLikedByUser(app.user) %}
+                         <i class="fas fa-thumbs-up"></i>
+                     {% else %}
+                        <i class="far fa-thumbs-up"></i>
+                     {% endif %}
+                     <span class="js-likes">{{ article.likes | length }}</span>
+                     <span class="js-label">j'aime</span>
+                 </a>
 
     </div>
      </div>
      </div>
  </div>
  </div>
+    {% block Javascripts %}
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script>
+            function onClickBtnLike(event){
+                event.preventDefault();
+
+
+                const url= this.href;
+                const spanCount = this.querySelector('span.js-likes');
+                const icone =this.querySelector('i')
+
+                axios.get(url).then(function (response){
+                    spanCount.textContent= response.data.likes;
+                    if(icone.classList.contains('fas')){
+                        icone.classList.replace('fas','far');
+                    }
+                    else{
+                        icone.classList.replace('far','fas');
+                    }
+                }).catch(function (error){
+                   if (error.response.status === 403){
+                       window.alert("Vous ne pouvez pas liker un article si vous n'etes pas connecté.")
+                   }
+                });
+            }
+
+            document.querySelectorAll('a.js-like').forEach(function (link) {
+                link.addEventListener('click',onClickBtnLike)
+                
+            })
+        </script>
+    {% endblock %}
 {% endblock %}
