--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -6,15 +6,16 @@
 
 <section id="main-content">
     <section class="wrapper">
-        <div class="row" >
+
             <br>
             <br>
             {% for article in articles %}
-            <div class="col-lg-9">
+        <div class="row col-md-5" >
+            <div style="padding: 5px">
 
-                <div class="card" style="width: 50rem; height: 40rem;">
+                <div class="card mb-4">
                     <img class="card-img-top" src="{{ asset('Admin/uploads/images/'~ article.image) }}" alt="Card image cap" style="width: 100%;
-    height: 18vw; object-fit: cover;">
+    height: 10vw; object-fit: cover;">
                     <div class="card-body">
                         <h4 class="card-title">{{ article.title }}</h4>
                         <p class="card-text">{{ article.description|slice(0,50) }}...</p>
@@ -22,11 +23,16 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
         </div>
+            {% endfor %}
 
 
     </section>
+    <div class="navigation" style="text-align: center">
+        {{ knp_pagination_render(articles) }}
+
+    </div>
+
 </section>
 
 
