--- a/templates/admin/mail.html.twig
+++ b/templates/admin/mail.html.twig
@@ -11,8 +11,7 @@
                                 <i class="fa fa-pencil"></i>  Compose Mail
                             </a>
                             <ul class="nav nav-pills nav-stacked mail-nav">
-                                <li class="active"><a href="inbox.html"> <i class="fa fa-inbox"></i> Inbox  <span class="label label-theme pull-right inbox-notification">3</span></a></li>
-                                <li><a href="#"> <i class="fa fa-envelope-o"></i> Send Mail</a></li>
+                                <li class="active"><a href="{{ path('mailview') }}"> <i class="fa fa-inbox"></i> Inbox </a></li>
                                 </li>
                             </ul>
                             <section class="panel">
@@ -34,39 +33,36 @@
                                 </form>
                             </h4>
                         </header>
-                        <div class="panel-body">
-                            <div class="compose-btn pull-right">
-                            </div>
-                            <div class="compose-mail">
-                                <form role="form-horizontal" method="post">
-                                    <div class="form-group">
-                                        <label for="to" class="">To:</label>
-                                        <input type="text" tabindex="1" id="to" class="form-control">
-                                        <div class="compose-options">
-                                            <a onclick="$(this).hide(); $('#cc').parent().removeClass('hidden'); $('#cc').focus();" href="javascript:;">Cc</a>
-                                            <a onclick="$(this).hide(); $('#bcc').parent().removeClass('hidden'); $('#bcc').focus();" href="javascript:;">Bcc</a>
-                                        </div>
-                                    </div>
-                                    <div class="form-group hidden">
-                                        <label for="cc" class="">Cc:</label>
-                                        <input type="text" tabindex="2" id="cc" class="form-control">
-                                    </div>
-                                    <div class="form-group hidden">
-                                        <label for="bcc" class="">Bcc:</label>
-                                        <input type="text" tabindex="2" id="bcc" class="form-control">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="subject" class="">Subject:</label>
-                                        <input type="text" tabindex="1" id="subject" class="form-control">
-                                    </div>
-                                    <div class="compose-editor">
-                                        <textarea class="wysihtml5 form-control" rows="9"></textarea>
+                        {{ contact.email }}
+                        {{ form_start(contactForm) }}
 
-                                    </div>
-                                    <div class="compose-btn">
-                                        <button class="btn btn-theme btn-sm"><i class="fa fa-check"></i> Send</button>
-                                    </div>
-                                </form>
+                            <div class="panel-body">
+                                <div class="compose-btn pull-right">
+                                </div>
+                                <div class="compose-mail">
+                                        <div class="form-group">
+                                            {{ form_row(contactForm.email, { 'label':'To:'})}}
+
+                                        </div>
+                                        <div class="form-group">
+                                            {{ form_row(contactForm.subject, { 'label':'Subject:' }) }}
+                                        </div>
+                                        <div class="compose-editor">
+                                            {{ form_row(contactForm.message) }}
+                                        </div>
+                                        <div class="compose-btn">
+                                            {{ form_row(contactForm.submit, {'attr': {'class':"btn btn-theme btn-sm" } })}}
+                                        </div>
+                                </div>
                             </div>
-                        </div>
+
+                        {{ form_end(contactForm)}}
+
+                    </section>
+                </div>
+            </div>
+            </div>
+        </section>
+    </section>
+
 {% endblock %}
