--- a/templates/Base2.html.twig
+++ b/templates/Base2.html.twig
@@ -75,9 +75,9 @@
 
 
                 <li class="sub-menu">
-                    <a href="javascript:;">
+                    <a href="{{ path('liste_user') }}">
                         <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
+                        <span>Data User Tables</span>
                     </a>
                     <ul class="sub">
                         <li><a href="basic_table.html">Articles</a></li>
@@ -87,7 +87,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="admin/listeemail.html.twig">
+                    <a href="{{ path('mailview') }}">
                         <i class="fa fa-envelope"></i>
                         <span>Mail </span>
                         <span class="label label-theme pull-right mail-info">2</span>
