--- a/templates/Base2.html.twig
+++ b/templates/Base2.html.twig
@@ -63,11 +63,11 @@
             <!-- sidebar menu start-->
             <ul class="sidebar-menu" id="nav-accordion">
                 <p class="centered"><a href="profile.html"><img src="{{ asset('Admin/img/ui-sam.jpg') }}" class="img-circle" width="80"></a></p>
-                <h5 class="centered">Sam Soffes</h5>
+                <h5 class="centered">Farah ben afia</h5>
                 <li class="mt">
-                    <a class="active" href="index.html">
+                    <a class="active" href="#">
                         <i class="fa fa-dashboard"></i>
-                        <span>Dashboard</span>
+                        <span>Profil</span>
                     </a>
                 </li>
 
@@ -90,7 +90,7 @@
                     <a href="{{ path('mailview') }}">
                         <i class="fa fa-envelope"></i>
                         <span>Mail </span>
-                        <span class="label label-theme pull-right mail-info">2</span>
+                        <span class="label label-theme pull-right mail-info"></span>
                     </a>
                 </li>
 
