--- a/templates/admin/message.html.twig
+++ b/templates/admin/message.html.twig
@@ -11,7 +11,7 @@
                     <div class="group-rom">
                         <div class="first-part odd">{{ pagecontact.username}} </div>
                         <div class="second-part">{{ pagecontact.message }}</div>
-                        <div  class="btn btn-theme04"><a href="{{ path('mail', {'id':pagecontact.id}) }}">Reply</a></div>
+                        <div  class="btn btn-info"><a href="{{ path('mail', {'id':pagecontact.id}) }}">Reply</a></div>
                     </div>
                 </aside>
             </div>
