--- a/templates/admin/loginadmin.html.twig
+++ b/templates/admin/loginadmin.html.twig
@@ -1,4 +1,120 @@
-{% extends 'base2.html.twig' %}
-{% block content %}
-
+<!-- Favicons -->
+<link href="{{ asset('Admin/img/favicon.png') }}" rel="icon">
+<link href="{{ asset('Admin/img/apple-touch-icon.png') }}" rel="apple-touch-icon">
+{% block css %}
+    <!-- Bootstrap core CSS -->
+    <link href="{{ asset('Admin/lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <!--external css-->
+    <link href="{{ asset('Admin/lib/font-awesome/css/font-awesome.css') }}" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="{{ asset('Admin/css/zabuto_calendar.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('Admin/lib/gritter/css/jquery.gritter.css') }}" />
+    <!-- Custom styles for this template -->
+    <link href="{{ asset('Admin/css/style.css') }}" rel="stylesheet">
+    <link href="{{ asset('Admin/css/style-responsive.css') }}" rel="stylesheet">
+    <script src="{{ asset('Admin/lib/chart-master/Chart.js') }}"></script>
 {% endblock %}
+    <div id="login-page">
+        <div class="container">
+            <form class="form-login" href="admin/profiladmin.html.twig">
+                <h2 class="form-login-heading">sign in now</h2>
+                <div class="login-wrap">
+                    <input type="text" class="form-control" placeholder="User ID" autofocus>
+                    <br>
+                    <input type="password" class="form-control" placeholder="Password">
+
+                    </label>
+                    <button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
+                    <hr>
+
+                </div>
+                <!-- Modal -->
+                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-footer">
+                                <button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
+                                <button class="btn btn-theme" type="button">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- modal -->
+            </form>
+        </div>
+    </div>
+<script src="{{ asset('Admin/lib/jquery/jquery.min.js') }}"></script>
+
+<script src="{{ asset('Admin/lib/bootstrap/js/bootstrap.min.js') }}"></script>
+<script class="include" type="text/javascript" src="{{ asset('Admin/lib/jquery.dcjqaccordion.2.7.js') }}"></script>
+<script src="{{ asset('Admin/lib/jquery.scrollTo.min.js') }}"></script>
+<script src="{{ asset('Admin/lib/jquery.nicescroll.js') }}" type="text/javascript"></script>
+<script src="{{ asset('Admin/lib/jquery.sparkline.js') }}"></script>
+<!--common script for all pages-->
+<script src="{{ asset('Admin/lib/common-scripts.js') }}"></script>
+<script type="text/javascript" src="{{ asset('Admin/lib/gritter/js/jquery.gritter.js') }}"></script>
+<script type="text/javascript" src="{{ asset('Admin/lib/gritter-conf.js') }}"></script>
+<!--script for this page-->
+<script src="{{ asset('Admin/lib/sparkline-chart.js') }}"></script>
+<script src="{{ asset('Admin/lib/zabuto_calendar.js') }}"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        var unique_id = $.gritter.add({
+            // (string | mandatory) the heading of the notification
+            title: 'Welcome to Dashio!',
+            // (string | mandatory) the text inside the notification
+            text: 'Hover me to enable the Close Button. You can hide the left sidebar clicking on the button next to the logo.',
+            // (string | optional) the image to display on the left
+            image: 'img/ui-sam.jpg',
+            // (bool | optional) if you want it to fade out on its own or just sit there
+            sticky: false,
+            // (int | optional) the time you want it to be alive for before fading out
+            time: 8000,
+            // (string | optional) the class name you want to apply to that specific message
+            class_name: 'my-sticky-class'
+        });
+
+        return false;
+    });
+</script>
+<script type="application/javascript">
+    $(document).ready(function() {
+        $("#date-popover").popover({
+            html: true,
+            trigger: "manual"
+        });
+        $("#date-popover").hide();
+        $("#date-popover").click(function(e) {
+            $(this).hide();
+        });
+
+        $("#my-calendar").zabuto_calendar({
+            action: function() {
+                return myDateFunction(this.id, false);
+            },
+            action_nav: function() {
+                return myNavFunction(this.id);
+            },
+            ajax: {
+                url: "show_data.php?action=1",
+                modal: true
+            },
+            legend: [{
+                type: "text",
+                label: "Special event",
+                badge: "00"
+            },
+                {
+                    type: "block",
+                    label: "Regular event",
+                }
+            ]
+        });
+    });
+
+    function myNavFunction(id) {
+        $("#date-popover").hide();
+        var nav = $("#" + id).data("navigation");
+        var to = $("#" + id).data("to");
+        console.log('nav ' + nav + ' to: ' + to.month + '/' + to.year);
+    }
+</script>
