--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -100,13 +100,13 @@
             </div>
             <div class="col-md-3">
                 <div class="user">
-                    <a href="#" class="btn wishlist">
+                    <a href="{{ path('wishlist_index') }}" class="btn wishlist">
                         <i class="fa fa-heart"></i>
-                        <span>(0)</span>
+                        <span></span>
                     </a>
                     <a href="{{ path('order_line_index') }}" class="btn cart">
                         <i class="fa fa-shopping-cart"></i>
-                        <span id="ItemsNumber">(0)</span>
+                        <span id="ItemsNumber"></span>
                     </a>
                 </div>
             </div>
