--- a/templates/order/editorder.html.twig
+++ b/templates/order/editorder.html.twig
@@ -1,1 +1,43 @@
 {% extends 'base2.html.twig' %}
+{% block title %}
+Edit Order
+{% endblock %}
+{% block content %}
+    <section id="main-content">
+    <section class="wrapper">
+{{ form_start(form) }}
+
+            <fieldset>
+                <legend> Modify Order</legend>
+            </fieldset>
+        <div class="col-md-8" style="align-content: center; margin: auto; display: inline-block;">
+                <div style="align-content: center; margin: auto;">
+                    <span>Date Order</span>
+                {{ form_widget(form.dateOrder,  {'attr' : { 'id' : '555' }})  }}
+                </div>
+                <span>Date Delivery</span>
+                <div style="align-content: center; margin: auto;">
+                {{ form_widget(form.dateDelivery) }}
+                </div>
+                <span>Order amount</span>
+                <div style="align-content: center; margin: auto;">
+                {{ form_widget(form.amount,  {'attr' : { 'readonly' : 'true'  }}) }}
+                </div>
+            <br/>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="align-content: center; margin: auto;">
+                    {{ form_widget(form.save, {'attr' : { 'class' : 'btn btn-primary btn-lg full-width' }}) }}
+                </div>
+        </div>
+
+{{ form_end(form) }}
+    </section>
+
+
+    </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+    element = document.getElementById("555");
+    console.log(element)
+    element.setAttribute('readonly', 'true');
+    </script>
+{% endblock %}
